# Asciimon-tflan006-jmore157-clee643-kye019

./: CMakeLists.txt  README.md  cc.txt
header/: Asciimon.hpp  AsciimonCodex.hpp  BattleMechanics.hpp  BattlePlayer.hpp  BattleResults.hpp  BattleSimulator.hpp  ComputerPlayer.hpp  ElementalType.hpp  HitDetails.hpp  HumanPlayer.hpp  Move.hpp  PlayerMove.hpp  Screen.hpp  StatGenerator.hpp  Statistics.hpp  Stats.hpp  Terminal.hpp  Trainer.hpp  TrainerGenerator.hpp
src/: Asciimon.cpp  AsciimonCodex.cpp  BattleMechanics.cpp  BattleResults.cpp  BattleSimulator.cpp  ComputerPlayer.cpp  HitDetails.cpp  HumanPlayer.cpp  Move.cpp  PlayerMove.cpp  StatGenerator.cpp  Statistics.cpp  Stats.cpp  Terminal.cpp  Trainer.cpp  TrainerGenerator.cpp  main.cpp
test/: AsciimonTester - Copy.cpp  BattleResultsTester.cpp  BattleTester.cpp  ComputerPlayerTester.cpp  HitDetailsTester.cpp  MainTester.cpp  MechanicsTester.cpp  MoveTester.cpp  PlayerMoveTester.cpp  TerminalTester.cpp  TrainerTester.cpp
